# onlineShop

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  urls.tsx
api/: permission.py  signals.py  urls.py
api/migrations/: 0001_initial.py  0002_alter_category_options_product_image.py  0003_alter_userprofile_birth.py  0004_alter_userprofile_description.py  0005_category_svg.py  0006_product_description.py  0007_product_owner.py  0008_alter_product_description.py  0009_product_shipping_price.py  0010_review.py  0011_order.py  0012_alter_order_items.py  0013_order_owner.py  0014_userprofile_cart.py  0015_order_apartament_order_city_order_country_and_more.py  0016_hash.py  0017_alter_hash_hash_alter_hash_user.py  0018_alter_hash_user.py  0019_alter_hash_hash.py  0020_alter_hash_options.py  0021_message.py  0022_order_modified_date.py  0023_remove_review_content_remove_review_grade_and_more.py
api/models/: __init__.py  category.py  hash.py  message.py  order.py  product.py  review.py  user.py
api/serializers/: __init__.py  category.py  message.py  order.py  product.py  review.py  user.py  user_profile.py
api/views/: __init__.py  category.py  login.py  message.py  order.py  product.py  review.py  user.py
backend/: README.md  pyproject.toml
backend/categories/: models.py  serializers.py  urls.py  views.py
backend/chat/: consumers.py  models.py  serializers.py  urls.py  views.py
backend/orders/: models.py  serializers.py  urls.py  (+1 more)
requirements/: requirements.in  requirements.txt
shop/: settings.py  urls.py
ui/: package-lock.json  package.json
(+118 files in other folders)
